replaced " with \quotes

--- a/Capitolo1.tex
+++ b/Capitolo1.tex
@@ -67,13 +67,13 @@ Spesso gli utenti degli OSN divulgano anche senza la piena consapevolezza dati s
 
 A differenza dei convenzionali meccanismi di protezione della privacy sui dati o sui OSN, che si focalizzano principalmente sulla protezione dell’identità o di attributi privati \cite{collective-data, diff-privacy, urwho, inferr-privacy, protection-private, stalking}, Knoxly si muove verso l’idea di \quotes{\textit{privacy as having the ability to control the dissemination of sensitive information}}.
 
-Attualmente i limiti di Knoxly sono quelli intrinsechi ad una analisi lessicale. Per questa ragione, in questo lavoro ci si vuole muovere verso metodi intelligenti che oltrepassino i metodi keyword-based, aggiungendo un "modulo semantico" in grado di capire se un testo scritto da un utente contenga o meno dati sensibili e/o personali.
+Attualmente i limiti di Knoxly sono quelli intrinsechi ad una analisi lessicale. Per questa ragione, in questo lavoro ci si vuole muovere verso metodi intelligenti che oltrepassino i metodi keyword-based, aggiungendo un \quotes{modulo semantico} in grado di capire se un testo scritto da un utente contenga o meno dati sensibili e/o personali.
 
 \section{Il modello di minaccia}
 Knoxly mira a proteggere gli utenti del Web dalla diffusione accidentale di qualsiasi contenuto inappropriato, in particolare le informazioni private o sensibili su se stessi. Si considera principalmente il rischio di una diffusione inappropriata a due tipo di pubblico: (1) follower o amici, che ricevono aggiornamenti dei post dell'utente; (2) staker esterni, che sbirciano nei post dei social network di un utente target. È probabile che entrambi conoscano l'identità offline dell'utente. Knoxly non impedisce all'utente di pubblicare i contenuti(sensibili) nè impedisce al destinatario di visualizzare i contenuti, fornendo privacy awareness. L'idea di Knoxly parte dal presupposto che dei tracciatori possono esplorare l'OSN attraverso l'interfaccia utente o raccogliere dati utilizzando un crawler automatizzato tramite l'API dell'OSN di riferimento. Infine, non considera la retrazione/cancellazione dei post precedenti, nè li analizza.
 
 \section{Obiettivi del lavoro}
-Questo lavoro si prefigge l'obiettivo di aggiungere a Knoxly un modulo intelligente in grado di poter riconoscere un dato sensibile in un testo scritto in linguaggio naturale senza affidarsi a meccanismi keyword-based, di segnalare all'utente la presenza di questo dato e di dare la possibilità all'utente di personalizzare il livello delle segnalazioni in modo tale che esso possa "imparare" a riconoscere quali sono i dati sensibili secondo lo specifico l'utente che sta utilizzando il plugin.
+Questo lavoro si prefigge l'obiettivo di aggiungere a Knoxly un modulo intelligente in grado di poter riconoscere un dato sensibile in un testo scritto in linguaggio naturale senza affidarsi a meccanismi keyword-based, di segnalare all'utente la presenza di questo dato e di dare la possibilità all'utente di personalizzare il livello delle segnalazioni in modo tale che esso possa \quotes{imparare} a riconoscere quali sono i dati sensibili secondo lo specifico l'utente che sta utilizzando il plugin.
 
 \subsection{I dati sensibili}
 \label{ssec:sensitive_data}
