--- a/Capitolo3.tex
+++ b/Capitolo3.tex
@@ -9,7 +9,7 @@ Per categorizzare la natura dei tweet verrà realizzato un classificatore in gra
 La metodologia utilizzata da Mao et al.~\cite{looseTweets} per raggiungere i proprio obiettivi è la seguente
 Inizialmente è stato realizzato un dataset contente i tweet presi dalla stream di Twitter nel periodo che va da gennaio a settembre 2010, una volta raccolti i tweet nel dataset questo è stato filtrato eliminando dal dataset di partenza i tweet che non contenevano le parole più ricorrenti trattate nelle categorie sopracitate. 
 
-Utilizzando naive Bayes e SVM viene relizzato un classificatore in grado di rilevare la presenza di un leak in un tweet. Grazie ad esso è stato possibile effettuare una analisi comparativa per vedere quali argomenti vengono trattati principalmente nei testi affetti da leakage. I risultati sono i seguenti: in Figura~\ref{fig:res-ebbrezza} si mostrano i principali argomenti trattati nei tweet affetti da leak. Si nota come il 25\% riguardi "comportamenti irrispettosi".
+Utilizzando naive Bayes e SVM viene relizzato un classificatore in grado di rilevare la presenza di un leak in un tweet. Grazie ad esso è stato possibile effettuare una analisi comparativa per vedere quali argomenti vengono trattati principalmente nei testi affetti da leakage. I risultati sono i seguenti: in Figura~\ref{fig:res-ebbrezza} si mostrano i principali argomenti trattati nei tweet affetti da leak. Si nota come il 25\% riguardi \quotes{comportamenti irrispettosi}.
 \begin{figure}[h!t]
     \centering
     \includegraphics[width=15cm]{Figure/related_work/ebbrezza.png}
