--- a/Capitolo6.tex
+++ b/Capitolo6.tex
@@ -162,7 +162,7 @@ Per questo esperimento abbiamo utilizzato un dataset minimale, composto da 10 el
 \end{table}
 \FloatBarrier
 
-Il risultato dell'esperimento è incoraggiante in quanto tutti i classificatori diminuiscono le loro performance via via che l'utente (bot selenium in questo caso) invia feedback negativi. In particolare in Figura~\ref{fig:plot_acc-health} e Figura~\ref{fig:plot_acc-travel} si mostrano i risultati ottenuti per Health e Travel, rispettivamente. Notiamo che, nel caso di Health, bastano pochi feedback per migliorare la conoscenza del classificatore e far adattare le sue segnalazioni alla percezione utente di privacy. Nel caso di Travel invece, l'utente ha bisogno di inviare più feedback prima che il classificatore comprenda le sue esigenze, in particolare ha bisogno di circa 10-12 feedback prima di apprendere bene "cosa si aspetta l'utente".
+Il risultato dell'esperimento è incoraggiante in quanto tutti i classificatori diminuiscono le loro performance via via che l'utente (bot selenium in questo caso) invia feedback negativi. In particolare in Figura~\ref{fig:plot_acc-health} e Figura~\ref{fig:plot_acc-travel} si mostrano i risultati ottenuti per Health e Travel, rispettivamente. Notiamo che, nel caso di Health, bastano pochi feedback per migliorare la conoscenza del classificatore e far adattare le sue segnalazioni alla percezione utente di privacy. Nel caso di Travel invece, l'utente ha bisogno di inviare più feedback prima che il classificatore comprenda le sue esigenze, in particolare ha bisogno di circa 10-12 feedback prima di apprendere bene \quotes{cosa si aspetta l'utente}.
 
 \begin{figure}[h!t]
     \centering
