--- a/capitolo5.tex
+++ b/capitolo5.tex
@@ -34,11 +34,11 @@ In questa sezione si dettagliano le caratteristiche del lato client di Knoxly.
 
 \subsection{Euristica di input}
 \label{ssec:euristicInput}
-Uno dei problemi affrontati in fase di sviluppo è comprendere quando è più opportuno chiamare i moduli basati su intelligenza artificiale di Knoxly. È evidente che l'utilizzo smisurato di moduli del backend risulterebbe in un appesantimento del servizio, rendendolo lento, fastidioso e inutilizzabile. Inoltre ciò comporterebbe l'analisi di testi che non rappresentano vere e proprie frasi, cioè composte da almeno \textit{soggetto}, \textit{predicato} e \textit{complemento}, o comunque che includono un numero tale di parole da poterne comprendere la semantica. Quindi, in altri termini, la domanda è\textit{ "quando è il momento adatto per inviare una frase al server e quando invece bisogna solo affidarsi al Keyword module?"}.
+Uno dei problemi affrontati in fase di sviluppo è comprendere quando è più opportuno chiamare i moduli basati su intelligenza artificiale di Knoxly. È evidente che l'utilizzo smisurato di moduli del backend risulterebbe in un appesantimento del servizio, rendendolo lento, fastidioso e inutilizzabile. Inoltre ciò comporterebbe l'analisi di testi che non rappresentano vere e proprie frasi, cioè composte da almeno \textit{soggetto}, \textit{predicato} e \textit{complemento}, o comunque che includono un numero tale di parole da poterne comprendere la semantica. Quindi, in altri termini, la domanda è\textit{ \quotes{quando è il momento adatto per inviare una frase al server e quando invece bisogna solo affidarsi al Keyword module?}}.
 
 Per rispondere a questo quesito bisogna definire una \textit{euristica di input} che deve garantire l'invio di frasi verso il server di Knoxly senza rischiare di creare un collo di bottiglia. 
 
-L'euristica di input è stata definita come segue: sia $txt$ il vettore contenente i caratteri che l'utente ha digitato, $n$ la lunghezza del vettore $txt$, $txt[last]$ l'ultimo carattere presente in $txt$ e $T = \{".", ";", "!", "?"\}$ l'insieme dei caratteri che vengono posti alla fine di una frase scritta in linguaggio naturale, allora
+L'euristica di input è stata definita come segue: sia $txt$ il vettore contenente i caratteri che l'utente ha digitato, $n$ la lunghezza del vettore $txt$, $txt[last]$ l'ultimo carattere presente in $txt$ e $T = \{``.", ``;", ``!", ``?"\}$ l'insieme dei caratteri che vengono posti alla fine di una frase scritta in linguaggio naturale, allora
 $$ n>=5 \And txt[last] = x \in T \implies \text{invia txt al server}$$.
 L'invio della frase al server avviene tramite una chiamata {\tt AJAX} verso l'endpoint del server di Knoxly. Quando arriva la risposta dal server viene chiamato il \textit{Customized Sensitiveness module} per valutare se il testo risulta sensibile anche sulla base della percezione di privacy che ha l'utente.
 
