added comment to similarity matrix

--- a/Bibliografia.tex
+++ b/Bibliografia.tex
@@ -225,7 +225,7 @@ In: Proceedings of the third ACM international conference on Web search and data
 
 \bibitem{inferr-privacy}
 Jianming He, Wesley W Chu e Zhenyu Victor Liu. \newline
-\textit{Inferring priva- cy information from social networks}.\newline
+\textit{Inferring privacy information from social networks}.\newline
 In: International Conference on Intelligence and Security Informatics. Springer. 2006, pp. 154–165.
 
 \bibitem{protection-private}
